# movie-ticket-booking-system-10th-grade-KDIliev22

./: CMakeLists.txt
Movara/: Movara.sln
Movara/Movara/: Menu.cpp  Menu.h  Movara.cpp  Movara.vcxproj  Movara.vcxproj.filters  User.h
Movara/Movara/include/: Crypto_psk.h  Database.h  Menu.h  User.h
Movara/Movara/src/: Crypto_psk.cpp  Database.cpp  Menu.cpp  Movara.cpp  User.cpp
TicketSys/: CMakeLists.txt
TicketSys/include/: booking.h  bookingsystem.h  cinema.h  datastorage.h  hall.h  movie.h  notifications.h  precompiler.h  seat.h  show.h  user.h
TicketSys/src/: booking.cpp  bookingsystem.cpp  cinema.cpp  datastorage.cpp  hall.cpp  main.cpp  movie.cpp  notifications.cpp  seat.cpp  show.cpp  user.cpp
src/app/: App.h  main.cpp
src/database/: Database.cpp  Database.h
src/models/: Booking.cpp  Booking.h  Movie.cpp  Movie.h  User.cpp  User.h
src/services/: BookingService.cpp  BookingService.h  PaymentService.cpp  PaymentService.h
src/ui/: BookingUI.cpp  BookingUI.h  Menu.cpp  Menu.h
src/utils/: Config.cpp  Config.h  Logger.cpp  Logger.h
tests/: test_database.cpp
